[package]
name = "annim"
version = "0.1.0"
publish = false

edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
tokio = { version = "1", features = ["full"] }
axum.workspace = true
tower-http = { version = "0.5.0", features = ["cors"] }
async-graphql = { version = "7.0.0", features = [
    "uuid",
    "decimal",
    "chrono",
    "dataloader",
    "dynamic-schema",
    "graphiql",
    "raw_value",
] }
async-graphql-axum = "7.0.0"
sea-orm = { version = "1.0.0", features = [
    "sqlx-sqlite",
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "with-uuid",
] }
sea-orm-migration = { version = "1.0.0", features = [
    "runtime-tokio-rustls",
    "with-uuid",
] }

anyhow.workspace = true
thiserror.workspace = true

tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.17" }
serde_json = "1.0"
chrono = "0.4.38"
serde.workspace = true

# Search
tantivy = "0.22.0"
lindera-core = "0.32.2"
lindera-dictionary = "0.32.2"
lindera-tantivy = { git = "https://github.com/ProjectAnni/lindera-tantivy", features = [
    "ipadic",
    "compress",
] }

rmp-serde = "1.3.0"
base64 = "0.22.1"

[features]
default = ["postgres"]
sqlite = ["sea-orm/sqlx-sqlite"]
postgres = ["sea-orm/sqlx-postgres"]
