[package]
name = "annim"
version = "0.1.0"
publish = false

edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anni-catalog.workspace = true
anni-ingest.workspace = true
anni-metadata.workspace = true
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "sync"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
axum.workspace = true
tower-http = { version = "0.7.0", features = ["cors"] }
async-graphql = { version = "7.2.1", features = [
    "uuid",
    "chrono",
    "graphiql",
] }
async-graphql-axum = "7.2.1"
sea-orm = { version = "1.1.20", default-features = false, features = [
    "macros",
    "runtime-tokio-rustls",
    "with-chrono",
    "with-json",
    "with-uuid",
] }
sea-orm-migration = { version = "1.1.20", default-features = false, features = [
    "runtime-tokio-rustls",
    "with-uuid",
] }

anyhow.workspace = true

tracing = { version = "0.1.44" }
tracing-subscriber = { version = "0.3.23" }
serde_json.workspace = true
sha2 = "0.10.9"
constant_time_eq = "0.4.2"
chrono = "0.4.45"
serde.workspace = true
thiserror.workspace = true
url = "2.5.8"

# Search
tantivy = "0.25.0"
lindera = "4.0.0"
lindera-tantivy = { version = "4.0.0", features = ["embed-ipadic"] }

rmp-serde = "1.3.1"
base64 = "0.22.1"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }

[features]
default = ["postgres"]
sqlite = ["sea-orm/sqlx-sqlite", "sea-orm-migration/sqlx-sqlite"]
postgres = ["sea-orm/sqlx-postgres", "sea-orm-migration/sqlx-postgres"]
