[package]
name = "anniv"
version = "0.1.0"
authors = ["Yesterday17 <t@yesterday17.cn>"]
edition = "2018"

[dependencies]
actix-web = "4.0.0-beta.3"
anni-backend = { path = "../anni-backend" }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.6.3", features = ["io"] }
anyhow = "1.0"

serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
